--- a/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
@@ -89,7 +89,7 @@
                                             <action selector="backAction:" destination="uMo-jK-dNo" eventType="touchUpInside" id="8lv-w1-IWa"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RO32" translatesAutoresizingMaskIntoConstraints="NO" id="hrH-gD-0Zr">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="worldPins" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hrH-gD-0Zr">
                                         <rect key="frame" x="70.666666666666671" y="56.666666666666657" width="18" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="18" id="cUp-il-9gD"/>
@@ -475,7 +475,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="270" height="59"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="RO32" translatesAutoresizingMaskIntoConstraints="NO" id="tSB-1R-2mo">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="worldPins" translatesAutoresizingMaskIntoConstraints="NO" id="tSB-1R-2mo">
                                                                     <rect key="frame" x="8" y="8" width="22" height="22"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 </imageView>
@@ -1762,7 +1762,6 @@
     <resources>
         <image name="BackArrow" width="10.333333015441895" height="19"/>
         <image name="CloseBut" width="27" height="27"/>
-        <image name="RO32" width="18" height="18"/>
         <image name="RightDisclosure" width="8.6666669845581055" height="16"/>
         <image name="bgMarketitem" width="375" height="142"/>
         <image name="clock" width="14" height="14.333333015441895"/>
