--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -243,7 +243,7 @@
                                             <action selector="backAction:" destination="sBJ-Zc-YxA" eventType="touchUpInside" id="wpo-3N-Yig"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RO32" translatesAutoresizingMaskIntoConstraints="NO" id="N49-i0-cE3">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="worldPins" translatesAutoresizingMaskIntoConstraints="NO" id="N49-i0-cE3">
                                         <rect key="frame" x="70.666666666666671" y="56.666666666666657" width="18" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="18" id="H6k-sq-nkL"/>
@@ -374,7 +374,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="270" height="59"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="RO32" translatesAutoresizingMaskIntoConstraints="NO" id="y8Z-Ya-8ki">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="worldPins" translatesAutoresizingMaskIntoConstraints="NO" id="y8Z-Ya-8ki">
                                                                     <rect key="frame" x="8" y="8" width="22" height="22"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 </imageView>
@@ -1096,7 +1096,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URD-dB-Nrt" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
                                                     <rect key="frame" x="15" y="0.0" width="345" height="116"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RO32" translatesAutoresizingMaskIntoConstraints="NO" id="Dqc-uc-rwR">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="worldPins" translatesAutoresizingMaskIntoConstraints="NO" id="Dqc-uc-rwR">
                                                             <rect key="frame" x="15" y="13" width="22" height="22"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="22" id="Rm4-zg-2Cw"/>
@@ -3338,7 +3338,6 @@ maximum 5 minutes after purchase!</string>
         <image name="CheckLarge" width="56.666667938232422" height="41.333332061767578"/>
         <image name="CloseBut" width="27" height="27"/>
         <image name="PlusSymbol" width="19" height="19"/>
-        <image name="RO32" width="18" height="18"/>
         <image name="addFav" width="28.666666030883789" height="17.333333969116211"/>
         <image name="arrowDown" width="16" height="8.6666669845581055"/>
         <image name="bgMarketitem" width="375" height="142"/>
@@ -3363,6 +3362,7 @@ maximum 5 minutes after purchase!</string>
         <image name="shield" width="13.666666984558105" height="16.666666030883789"/>
         <image name="tutorial" width="375" height="272"/>
         <image name="walletLarge" width="51" height="51.666667938232422"/>
+        <image name="worldPins" width="17" height="17"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="6eO-CG-Oxt"/>
